# codex-automation

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  MANIFEST.public.json  README.md  SECURITY.md
.github/workflows/: release.yml
crates/codex-automation-cli/: Cargo.toml
crates/codex-automation-cli/src/: embedded_skill.rs  main.rs
crates/codex-automation-cli/tests/: cli_smoke.rs
crates/codex-automation-core/: Cargo.toml
crates/codex-automation-core/src/: app_dirs.rs  control.rs  lib.rs  storage.rs  workspace.rs
crates/codex-automation-core/templates/control-workspace/: AGENTS.md  README.md
crates/codex-automation-core/templates/control-workspace/workers/: control-plane.toml  ops-analyst.toml  release-manager.toml  repo-maintainer.toml
docs/: AGENT_BOOTSTRAP.md  APP_ARCHITECTURE.md  AUTONOMY_POLICY.md  CONTROL_PLANE_PROTOCOL.md  MAINTAINER_WORKFLOW.md  PUBLICATION.md  SKILL_SYSTEM.md  TARGET_REPO_BOOTSTRAP.md
scripts/: build_public_export.py  install-skill.sh  install.sh  setup.py
skills/codex-automation-dev/: SKILL.md
skills/codex-automation-dev/agents/: openai.yaml
skills/codex-automation-dev/scripts/: verify_clean_install.py  verify_docker_install.sh  verify_skill_install.py
skills/codex-automation-setup/: SKILL.md
skills/codex-automation-setup/agents/: openai.yaml
skills/codex-automation-setup/scripts/: doctor.py  install_binary.py  setup.py  update.py
tests/fixtures/docs-repo/: README.md
tests/fixtures/monorepo-lite/: AGENTS.md  README.md
tests/fixtures/node-package/: README.md  package.json
(+9 files in other folders)
