[package]
name = "codex-automation-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Binary CLI for codex-automation."

[[bin]]
name = "codex-automation"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
codex-automation-core = { path = "../codex-automation-core" }
serde_json.workspace = true
toml.workspace = true

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.15"
