[package]
name = "codex-automation-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core local state and workspace operations for codex-automation."

[dependencies]
anyhow.workspace = true
chrono.workspace = true
libc.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
